--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,12 @@
 @import "lib/bootstrap/less/bootstrap.less";
 
+@font-face {
+  font-family: 'Glyphicons Halflings';
+
+  src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
+
 @error: #ff4422;
 @warning: #ffbb55;
 @success: #bbff00;
@@ -8,6 +15,13 @@
 @white: #eeeeee;
 @grey: #888888;
 @black: #333333;
+
+body {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
 
 #header {
   background: @black;
