--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -4,7 +4,7 @@
   font-family: 'Glyphicons Halflings';
 
   src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot');
-  src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
 @error: #ff4422;
@@ -17,17 +17,14 @@
 @black: #333333;
 
 body {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
+
 }
 
 #header {
   background: @black;
   color: @white;
-  padding: 10px;
-
+  padding: 20px;
+  height: 80px;
   h1 {
     margin: 0;
     padding: 0;
