--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -14,11 +14,20 @@
 
 @white: #eeeeee;
 @dark-purple: #442288;
+@dark-red: #430000;
 @grey: #888888;
 @black: #333333;
 
 #content {
-  padding-top: 50px; // not sure why navbar is bugged.
+  padding-top: 80px; // not sure why navbar is bugged.
+}
+
+form dl dd.info {
+  font-size: 80%;
+  font-style: italic;
+  float: right;
+  margin-right: 5px;
+  color: @dark-red;
 }
 
 .user-profile {
