--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,12 +4,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
         <nav id="header" class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="/">@Messages.get("brand.name")</a>
                 </div>
 
@@ -39,9 +46,10 @@
             </div>
         </nav>
         <div id="content" class="container">
-        @content
+            @content
         </div>
         <script src="@routes.Assets.at("lib/jquery/jquery.min.js")" ></script>
+        <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" ></script>
         <script src="@routes.Assets.at("moment.js")" ></script>
         <script type="text/javascript" src="@routes.Reverse.jsRoutes"></script>
         <script src="@routes.Assets.at("javascripts/main.js")" ></script>
