--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -7,6 +7,7 @@
   src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
+/* Generic colours and what-not */
 @error: #ff4422;
 @warning: #ffbb55;
 @success: #bbff00;
@@ -22,6 +23,7 @@
   padding-top: 80px; // not sure why navbar is bugged.
 }
 
+/* Format the Play field helper text */
 form dl dd.info {
   font-size: 80%;
   font-style: italic;
@@ -30,19 +32,14 @@ form dl dd.info {
   color: @dark-red;
 }
 
+/* User profile page */
 .user-profile {
   margin-top: 20px;
 }
-
 span.username-profile {
   font-size: 32px;
   font-weight: bold;
 }
-
-#text-area-submit {
-  height: 120px;
-}
-
 .image-frame {
   width: 120px;
   height: 120px;
@@ -53,10 +50,10 @@ span.username-profile {
   text-align: center;
 }
 
-.bonmot {
-  box-shadow: 1px 1px 5px #888;
+/* Bonmot post text area size */
+#text-area-submit {
+  height: 120px;
 }
-
 #postForm {
   padding-top: 25px;
 
@@ -65,10 +62,15 @@ span.username-profile {
   }
 }
 
+/* Floating bonmot panels */
+.bonmot {
+  box-shadow: 1px 1px 5px #888;
+}
+
+/* Generic styles */
 button {
   margin: 3px;
 }
-
 .spacer-45 {
   height: 45px;
 }
