add styles / SPA draft outline

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,27 +1,4 @@
-@import "lib/bootstrap/less/bootstrap.less";
-
-@font-face {
-  font-family: 'Glyphicons Halflings';
-
-  src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot');
-  src: url('../lib/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../lib/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-}
-
-/* Generic colours and what-not */
-@error: #ff4422;
-@warning: #ffbb55;
-@success: #bbff00;
-@default: #00bbff;
-
-@white: #eeeeee;
-@dark-purple: #442288;
-@dark-red: #430000;
-@grey: #888888;
-@black: #333333;
-
-#content {
-  padding-top: 80px; // not sure why navbar is bugged.
-}
+@import "utils/_common.less";
 
 /* Format the Play field helper text */
 form dl dd.info {
@@ -62,15 +39,7 @@ span.username-profile {
   }
 }
 
-/* Floating bonmot panels */
-.bonmot {
-  box-shadow: 1px 1px 5px #888;
-}
-
-/* Generic styles */
 button {
   margin: 3px;
 }
-.spacer-45 {
-  height: 45px;
-}
+
