--- a/app/views/singlepage.scala.html
+++ b/app/views/singlepage.scala.html
@@ -1,10 +1,58 @@
+@import play.i18n._
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/spa.css")">
     </head>
     <body>
-        <h1>Single Page Application</h1>
-        In progress...
+        <div>
+            <nav id="header" class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/">@Messages.get("brand.name") <span class="small">(spa)</span></a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav pull-right">
+                            <form class="form-group navbar-form navbar-right" role="search">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Search">
+                                    <span class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                                    </span>
+                                </div>
+                            </form>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div id="content" class="container">
+            
+            <!-- TODO: Check if logged in -->
+            <div class="form-group">
+                <form id="post-form">
+                    <label>Post</label>
+                    <textarea class="form-control" name="post"></textarea>
+                    <button class="btn btn-primary pull-right">Post <i class="glyphicon glyphicon-bullhorn"></i></button>
+                </form>
+            </div>
+
+
+            <!-- TODO: React loading of messagess -->
+
+        </div>
+        <script src="@routes.Assets.at("lib/jquery/jquery.min.js")" ></script>
+        <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" ></script>
+        <script src="@routes.Assets.at("moment.js")" ></script>
+        <script type="text/javascript" src="@routes.Reverse.jsRoutes"></script>
+        <script src="@routes.Assets.at("javascripts/spa.js")" ></script>
+        @*<script src="@routes.Assets.at("javascripts/bonmot.js")" ></script>*@
     </body>
 </html>
