--- a/app/views/bonmot.scala.html
+++ b/app/views/bonmot.scala.html
@@ -1,6 +1,6 @@
 @(mot: models.BonMot)
 
-<div class="panel panel-default bonmot" data-bonmot-id="@mot.id">
+<div class="panel panel-default bonmot" data-bonmot-id="@mot.get_id()">
     <div class="panel-body">
         <span class="words">@mot.text</span>
     </div>
