bonmot saves to mongo

--- a/app/views/bonmot.scala.html
+++ b/app/views/bonmot.scala.html
@@ -7,7 +7,7 @@
     <div class="panel-footer">
         <div class="small">
             <span class="pull-right"><em class="moment-format" data-moment-date="@mot.createdOn">@mot.createdOn</em></span>
-            <span class="pull-left"><a href="/user/@mot.user.username">@{val name = mot.user.username; "@" + name}</a></span>
+            <span class="pull-left"><a href="/user/@mot.username">@{val name = mot.username; "@" + name}</a></span>
             <div class="clearfix"></div>
         </div>
     </div>
