--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -53,7 +53,7 @@
         </div>
         <script src="@routes.Assets.at("lib/jquery/jquery.min.js")" ></script>
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" ></script>
-        <script src="@routes.Assets.at("moment.js")" ></script>
+        <script src="@routes.Assets.at("lib/momentjs/moment.js")" ></script>
         <script type="text/javascript" src="@routes.Reverse.jsRoutes"></script>
         <script src="@routes.Assets.at("javascripts/main.js")" ></script>
         <script src="@routes.Assets.at("javascripts/bonmot.js")" ></script>
