--- a/app/views/singlepage.scala.html
+++ b/app/views/singlepage.scala.html
@@ -51,6 +51,7 @@
         <script src="@routes.Assets.at("lib/jquery/jquery.min.js")" ></script>
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" ></script>
         <script src="@routes.Assets.at("moment.js")" ></script>
+        <script src="@routes.Assets.at("lib/react/react.js")></script>
         <script type="text/javascript" src="@routes.Reverse.jsRoutes"></script>
         <script src="@routes.Assets.at("javascripts/spa.js")" ></script>
         @*<script src="@routes.Assets.at("javascripts/bonmot.js")" ></script>*@
